css arredondado, links da ufscar clicáveis
css com os cantos arredondados, botão da grade pra cima e os links da ufscar estilizados

--- a/hello.html
+++ b/hello.html
@@ -5,11 +5,15 @@
 
 </head>
 <body>
-  <h1>Links</h1>
-  <a target="_blank" href="https://ava2.ead.ufscar.br/my/">ava</a>
-  https://www.dcomp.ufscar.br/matriz-curricular/
-  https://sistemas.ufscar.br/siga/
-  https://sistemas.ufscar.br/sagui/
+  <h1>UFSCar BCC 021</h1>
+  <button id="botao1">Grade</button>
+  <div id="linksufscar">
+  <a class="links" target="_blank" href="https://ava2.ead.ufscar.br/my/">AVA</a>
+  <a class="links" target="_blank" href="https://www.dcomp.ufscar.br/matriz-curricular/">Matriz Curricular</a>
+  <a class="links" target="_blank" href="https://sistemas.ufscar.br/siga/">SIGA</a>
+  <a class="links" target="_blank" href="https://sistemas.ufscar.br/sagui/">SAGUI</a>    
+  </div>
+  
   <div id="horario">
     <table>
       <tr>
@@ -138,7 +142,7 @@
       </tr>
     </table>
   </div>
-    <button id="botao1">Grade</button>
+    
 
   <div id="grade">
     <img alt="" src="grade.png"/>
